fix spacing of services when fullscreen

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ html {
     font-size: 12px;
     color: #939393;
   }
+
   /*====News Section====*/
     /*==news container==*/
     .news-item, .news-priority {
@@ -509,22 +510,19 @@ input{
     Body Styles - Alyssa
   ==================================*/
     .page__intro {
-      margin: 10% 2%;
+      margin: 5% 2%;
     }
   /*====Services section====*/
-  .page-services {
-    margin-bottom: 10%;
-    margin-top: 10%;
-  }
+ 
   .services__content {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    margin-bottom: 5%;
   }
     .service__item {
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin: 10% auto;
     }
   .service__icon {
     margin-bottom: 10px;
